[gd_scene load_steps=6 format=3 uid="uid://d3i64a5qg7iv"]

[ext_resource type="Script" path="res://scenes/editor/editor.gd" id="1_2osj4"]
[ext_resource type="Theme" uid="uid://blbl1uhbtj7qj" path="res://resources/theme/zude_tools_theme.tres" id="1_o4ffb"]
[ext_resource type="PackedScene" uid="uid://cm8te31wedhp2" path="res://scenes/episode_panel/episode_panel.tscn" id="3_chmdv"]
[ext_resource type="PackedScene" uid="uid://ca4tupbrsiy46" path="res://scenes/hero_panel/hero_panel.tscn" id="3_np2d4"]
[ext_resource type="Texture2D" uid="uid://dl6a2mn8felt5" path="res://icons/eye.svg" id="5_trbm3"]

[node name="ZudeToolsEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_o4ffb")
script = ExtResource("1_2osj4")

[node name="EditorSplit" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EditorTop" type="VBoxContainer" parent="EditorSplit"]
layout_mode = 2
size_flags_vertical = 3

[node name="EpisodePanel" parent="EditorSplit/EditorTop" node_paths=PackedStringArray("editor") instance=ExtResource("3_chmdv")]
unique_name_in_owner = true
layout_mode = 2
editor = NodePath("../../..")

[node name="EpisodesButtonBar" type="PanelContainer" parent="EditorSplit/EditorTop"]
visible = false
layout_mode = 2
size_flags_vertical = 8

[node name="EpisodesButtonBarMargin" type="MarginContainer" parent="EditorSplit/EditorTop/EpisodesButtonBar"]
layout_mode = 2

[node name="EpisodesButtonBarHBox" type="HBoxContainer" parent="EditorSplit/EditorTop/EpisodesButtonBar/EpisodesButtonBarMargin"]
layout_mode = 2

[node name="EpisodesButtonBarLeft" type="HBoxContainer" parent="EditorSplit/EditorTop/EpisodesButtonBar/EpisodesButtonBarMargin/EpisodesButtonBarHBox"]
layout_mode = 2

[node name="MissingThumbButton" type="Button" parent="EditorSplit/EditorTop/EpisodesButtonBar/EpisodesButtonBarMargin/EpisodesButtonBarHBox/EpisodesButtonBarLeft"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Generate Missing Thumbnails"

[node name="Button" type="Button" parent="EditorSplit/EditorTop/EpisodesButtonBar/EpisodesButtonBarMargin/EpisodesButtonBarHBox/EpisodesButtonBarLeft"]
layout_mode = 2
text = "I'm Also A Button"

[node name="EditorBottom" type="HSplitContainer" parent="EditorSplit"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="HeroPanel" parent="EditorSplit/EditorBottom" instance=ExtResource("3_np2d4")]
unique_name_in_owner = true
layout_mode = 2

[node name="EditorBottomRight" type="VBoxContainer" parent="EditorSplit/EditorBottom"]
layout_mode = 2

[node name="TabsContainer" type="TabContainer" parent="EditorSplit/EditorBottom/EditorBottomRight"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 265)
layout_mode = 2
size_flags_vertical = 3
drag_to_rearrange_enabled = true

[node name="TabButtonBar" type="PanelContainer" parent="EditorSplit/EditorBottom/EditorBottomRight"]
layout_mode = 2

[node name="TabButtonBarMargin" type="MarginContainer" parent="EditorSplit/EditorBottom/EditorBottomRight/TabButtonBar"]
layout_mode = 2

[node name="TabButtonBarHBox" type="HBoxContainer" parent="EditorSplit/EditorBottom/EditorBottomRight/TabButtonBar/TabButtonBarMargin"]
layout_mode = 2

[node name="ToggleHeroButton" type="Button" parent="EditorSplit/EditorBottom/EditorBottomRight/TabButtonBar/TabButtonBarMargin/TabButtonBarHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
icon = ExtResource("5_trbm3")
flat = true
icon_alignment = 1

[node name="PreviewSizeSlider" type="HSlider" parent="EditorSplit/EditorBottom/EditorBottomRight/TabButtonBar/TabButtonBarMargin/TabButtonBarHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
min_value = 1.0
max_value = 3.0
step = 0.25
value = 1.0
scrollable = false

[node name="ItemCountLineEdit" type="LineEdit" parent="EditorSplit/EditorBottom/EditorBottomRight/TabButtonBar/TabButtonBarMargin/TabButtonBarHBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
placeholder_text = "0"
alignment = 2
max_length = 9
editable = false
expand_to_text_length = true
flat = true
